Guardado antes de cambiar debian

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-PORT=8080
+PORT=8080 
+
+
  
- 
+MONGODB_CNN=mongodb+srv://Marcos-Diaz-curso:RETCL1aAAOl2PYbE@cafecloster.q0mn8.mongodb.net/cafedb
+
+
